<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#88000000"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/bb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center_horizontal"
        android:scrollHorizontally="false"
        android:text="@string/txt_samsung_total_cost"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="casual" />

    <TextView
        android:id="@+id/id_txt_samsung_total_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/txt_total_number_item_47"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="casual" />

    <TextView
        android:id="@+id/id_txt_total_number_item_47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/txt_total_cost_category_7"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="casual" />

    <TextView
        android:id="@+id/id_txt_total_cost_category_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/txt_total_cost_province_ontario"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="casual" />

    <TextView
        android:id="@+id/id_txt_total_cost_province_ontario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/txt_total_cost_country_usa"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="casual" />

    <TextView
        android:id="@+id/id_txt_total_cost_country_usa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/txt_max_cost_building"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="casual" />

    <TextView
        android:id="@+id/id_txt_max_cost_building"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</LinearLayout>